mb-dark: Prioritize table[style*=background] over table.wikitable
Rule for elements with inline CSS is more important but too unspecific.

--- a/musicbrainz-dark.user.css
+++ b/musicbrainz-dark.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name         MusicBrainz Dark
-@version      2021.12.6
+@version      2021.12.14
 @namespace    https://github.com/kellnerd/userstyles
 @author       kellnerd
 @description  Dark theme for MusicBrainz.
@@ -473,7 +473,7 @@
 	#contentSub { /* subtitles like "redirected from" */
 		color: var(--text-weak);
 	}
-	table.wikitable {
+	table.wikitable:not([style*=background]) { /* prioritize table[style*=background] */
 		color: inherit;
 		background: inherit;
 	}
