mb-dark: Rename to "Dark Side of MusicBrainz"
There was already another userstyle from 2013 with the same name:
https://community.metabrainz.org/t/696614/9

--- a/musicbrainz-userscripts-dark.user.css
+++ b/musicbrainz-userscripts-dark.user.css
@@ -1,10 +1,10 @@
 /* ==UserStyle==
-@name         MusicBrainz Dark (Userscripts)
-@version      2023.11.20
+@name         Dark Side of MusicBrainz (for Userscripts)
+@version      2024.5.22
 @namespace    https://github.com/kellnerd/userstyles
 @author       kellnerd
-@description  Companion for “MusicBrainz Dark” with additional style fixes for some popular userscripts.
-@homepageURL  https://github.com/kellnerd/userstyles#musicbrainz-dark
+@description  Companion for “Dark Side of MusicBrainz” with additional style fixes for some popular userscripts.
+@homepageURL  https://github.com/kellnerd/userstyles#musicbrainz
 @license      MIT
 ==/UserStyle== */
 
