--- a/musicbrainz-dark.user.css
+++ b/musicbrainz-dark.user.css
@@ -1,10 +1,10 @@
 /* ==UserStyle==
-@name         MusicBrainz Dark
-@version      2024.5.21
+@name         Dark Side of MusicBrainz
+@version      2024.5.22
 @namespace    https://github.com/kellnerd/userstyles
 @author       kellnerd
 @description  Dark theme for MusicBrainz.
-@homepageURL  https://github.com/kellnerd/userstyles#musicbrainz-dark
+@homepageURL  https://github.com/kellnerd/userstyles#musicbrainz
 @license      MIT
 ==/UserStyle== */
 
